# -hemical-alculator

./: README.md
ChemCalc/: CMakeLists.txt  ChemLib.hpp  PressureSolver.cpp  PressureSolver.hpp  SolverC.cpp  SolverC.hpp  TemperatureSolver.cpp  TemperatureSolver.hpp  VolumeSolver.cpp  VolumeSolver.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ChemCalc/ChemLib/: CMakeLists.txt
ChemCalc/ChemLib/inc/: CMakeLists.txt  ChemLib.hpp  Version.hpp.in  VolumeSolver.hpp
ChemCalc/ChemLib/src/: CMakeLists.txt
ChemLib/: CMakeLists.txt
ChemLib/inc/: PressureSolver.hpp  SolverC.hpp  TemperatureSolver.hpp  Version.hpp
ChemLib/src/: main.txt
build-ChemCalc-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.recompact  .ninja_log.restat  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-ChemCalc-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-2a6daa50fafd4294cb26.json  cache-v2-acb91d7420344a451bd4.json  cache-v2-d80042e371011ebf48de.json  cmakeFiles-v1-205e007aad2b9113b474.json  cmakeFiles-v1-64eac48f9415ae9e56f0.json  cmakeFiles-v1-c8c12d2da4adbdf282c4.json  codemodel-v2-1c64ee3f4ccba7670354.json  codemodel-v2-351c6dca305ffd5ca0ee.json  codemodel-v2-5d086c1ccf957b7f5d58.json  codemodel-v2-972f49c8be1a653d57c8.json  codemodel-v2-d3fec8378262451a20a0.json  directory-.-Debug-544fb9d65241ba1ab0ff.json  directory-.-Debug-6e4677a0c668c0ac4efd.json  directory-.-Debug-e816924baebcb9f7902c.json  directory-ChemLib.inc-Debug-fb01668edad183429919.json  directory-ChemLib.src-Debug-603ed2d60600df057646.json  index-2022-11-28T18-13-35-0721.json  index-2022-12-04T11-55-44-0313.json  index-2022-12-04T15-41-52-0663.json  index-2022-12-04T17-14-09-0925.json  index-2022-12-18T16-49-13-0000.json  target-ChemCalc-Debug-08d062e5cb9ffcce88b6.json  target-ChemCalc-Debug-501bceb6dba4f0aba6dc.json  target-ChemCalc-Debug-635c714002560794332a.json  target-ChemCalc-Debug-ad0f11bdf348e6a2ac02.json  target-ChemCalc-Debug-bdac62c6370419e935fc.json  target-ChemLib-Debug-2b80989d64b8c505de0f.json  target-ChemLib-Debug-91039b3e11ced5b83b38.json
build-ChemCalc-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-8806145ba17c1e99e6ec.json  cache-v2-c236a4a02a01bcd76157.json  cmakeFiles-v1-a997567c19d153928b3e.json  codemodel-v2-56947ab8291263c1a605.json  codemodel-v2-8822eacebd1b1d2b871f.json  codemodel-v2-b2cedfde44172e8b7567.json  directory-.-Debug-35a44085ad24d92837c4.json  directory-.-Debug-397d64d3e5903503f2d1.json  directory-.-Debug-447446a57279c189b9d1.json  directory-ChemLib-Debug-19ebd38dea599f31bbf2.json  index-2022-12-04T11-55-37-0458.json  index-2022-12-04T15-08-45-0307.json  index-2022-12-18T16-45-51-0551.json  target-CHEMLIB-Debug-79eb5b7b448a0785e788.json  target-ChemCalc-Debug-b7edf95283e4b5390cbd.json  target-ChemCalc-Debug-b9086a64376a9ee7c495.json  target-ChemCalc-Debug-eb5209f707cc56339abd.json  target-ChemCalc_autogen-Debug-c28b1180b444f26d2bb1.json  target-ChemCalc_autogen_timestamp_deps-Debug-257b2d28e28fd502cfca.json
build-ChemCalc-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-ChemCalc-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-ChemCalc-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: ChemLib.hpp.4C4A048CE82225B7.idx  ChemLib.hpp.98C121DBD2D40D75.idx  PressureSolver.cpp.99DC607A4EF27C90.idx  PressureSolver.cpp.F8384A588C7F1785.idx  PressureSolver.hpp.46D04BE9BC460A68.idx  PressureSolver.hpp.811462B47A8656A8.idx  QAction.B5C1072CE08D2D31.idx  QApplication.F248073C1253EACD.idx  QComboBox.514146F00CF738AF.idx  QFormLayout.C62DA8F3E92CBA16.idx  QHBoxLayout.86B47D0F07543BE4.idx  QLabel.EBC1922A8D67DF2D.idx  QLayout.DC77F063A061CD4B.idx  QLineEdit.75F69929563041B9.idx  QMainWindow.57D031EBE9316266.idx  QMenu.65C34719019578A4.idx  QMenuBar.D7F1DF87A4784133.idx  QPushButton.EC1E82407BA7058E.idx  QRadioButton.5C1E449C25A55DE2.idx  QStatusBar.F72BC10463DD50DB.idx  QVariant.5D301D9C83B74EDD.idx  QWidget.4C4DC24A46A57B3C.idx  SolverC.cpp.4978C794E4BBD640.idx  SolverC.cpp.E815A854DB8D8B64.idx  SolverC.hpp.4C8C0F35191FACD0.idx  SolverC.hpp.87203BD25115E8D7.idx  TemperatureSolver.cpp.16E105DB2530EB6C.idx  TemperatureSolver.cpp.2339A4DF16245F65.idx  TemperatureSolver.hpp.33B240062247460F.idx  TemperatureSolver.hpp.F5FD9B1011D3F4AE.idx  Version.hpp.34EB837F44C99076.idx  VolumeSolver.cpp.90C7BB6DFCA6599A.idx  VolumeSolver.cpp.BC7E8BEC0292032B.idx  _mingw.h.0487F833F24C705F.idx  (+389 more)
build-ChemCalc-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/CHEMLIB_autogen/: deps  moc_predefs.h
build-ChemCalc-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/ChemCalc_autogen/: deps
build-ChemCalc-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/ChemCalc_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-ChemCalc-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/ChemCalc_autogen/include/: ui_mainwindow.h
build-ChemCalc-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/ChemLib/: cmake_install.cmake
build-ChemCalc-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/ChemLib/ChemLib_autogen/: deps  moc_predefs.h
build-ChemCalc-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/ChemLib/inc/: cmake_install.cmake
build-ChemCalc-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/ChemLib/src/: cmake_install.cmake
build-ChemCalc-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/LIBCHEM_autogen/: deps  moc_predefs.h
lib/: CMakeLists.txt
lib/include/: ChemLib.h  PressureSolver.h  TemperatureSolver.h
lib/include/chemlib/: VolumeSolver.h
lib/src/: PressureSolver.cpp  SolverC.cpp  VolumeSolver.cpp  main.cpp
